--- a/assets/styles/config/base.scss
+++ b/assets/styles/config/base.scss
@@ -1,6 +1,14 @@
 html {
   font-size: 16px;
 
+  @include md {
+    font-size: 14px;
+  }
+
+  @include sm {
+    font-size: 12px;
+  }
+
 }
 
 body {
